--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 .parent{
     display: flex;
     flex-direction: row;
-    width: 100vw;
+    width: 100%;
 }
 body{
     margin: 0;
     padding: 0;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',  sans-serif;
 }
 .leftchild{
     /* position: relative; */
@@ -57,16 +58,6 @@ body{
     margin-left: 21px;
     margin-bottom: -12px;
     margin-top: -69px;
-}
-.followbtn{
-    position: sticky;
-    top: 0px;
-    margin-left: 344px;
-    margin-top: -31px;
-}
-.third input{
-    position: relative;
-    left: 442px
 }
 .box{
     /* border: 1px solid gray; */
@@ -120,7 +111,7 @@ p{
 }
 .eighth img{
     height: 400px;
-    width: 506px;
+    width: 501px;
 }
 .leftcontent{
     position: fixed;
@@ -152,7 +143,7 @@ p{
     /* gap: 29px; */
     /* justify-content: space-between; */
     margin: 7px;
-    width: 318px;
+    width: 330px;
 }
 .searcha{
    margin-right: 18px;
@@ -167,7 +158,8 @@ p{
     border: 1px solid grey;
     border-radius: 28px;
     margin: 13px;
-    width: 358px;
+    /* width: 358px; */
+    margin-right: 92px;
 }
 .signin{
    text-align: center;
@@ -178,9 +170,9 @@ p{
    padding: 10px;
 
 }
-.h3{
+/*.h3{
     margin: 0;
-}
+}*/
 .blue{
     color: blue;
 }
@@ -199,6 +191,7 @@ p{
     display: flex;
     flex-direction: row;
     margin-bottom:16px;
+    gap: 25px;
    
 }
 .c{
@@ -214,8 +207,9 @@ p{
     flex-direction: row;
 }
 .liveb img{
-    width: 90px;
+    width: 100px;
     height: 60px;
+    margin-right: 6px;
 }
 h4{
     margin-right: 41px;
@@ -248,7 +242,7 @@ button img{
     width: 20px;
     margin-right: 10px;
     position: relative;
-    top: 3pxi;
+    top: 3px;
 }
 .ninth{
     display: flex;
@@ -257,41 +251,30 @@ button img{
     margin-top: 12px;
     font-size: 10px;
 }
-.follow{
+/*.follow{
     border-radius: 20px;
     width: 80px;
     
     height: 42px;
-    /* width: 90px; */
+    /* width: 90px; 
     background-color: white;
     color: black;
     margin-left: 114px;
-}
-.h{
-    display: flex;
+}*/
+.btnn.a{
     float: right;
-    /* position: sticky; */
-    /* top: 10px; */
-    z-index: 1
-}
-.ha{
-    margin-right: 216px;
-    /* margin-bottom: 38px; */
-    /* position: relative; */
-    /* top: -61px; */
-
-}
-.ha img{
-    height: 101px;
-    width: 97px;
-    /* margin-bottom: 90px; */
-    border-radius: 50px;
-}
-.followa{
+    margin-right: 15px;
     position: sticky;
-    top: 10px;
+    top: 7px;
+    z-index: 3;
+    /* margin-right: 5px; */
 }
-.bootomchild{
-    height: 200px;
-    border: 2px solid white;
+.btnn{
+    margin-right: 5px;
+}
+button{
+    width: 86px;
+    height: 39px;
+    border-radius: 16px;
+    font-size: 15px;
 }
