update twitter clone

--- a/style.css
+++ b/style.css
@@ -68,10 +68,6 @@ body{
     /* margin-top: 53px; */
     width: 525px;
 }
-.link{
-    color: blue;
-}
-
 article{
     border: 1px solid gray;
     padding: 17px;
@@ -120,11 +116,28 @@ p{
     /* justify-content: center; */
     /* align-items: center; */
     flex-direction: column;
-    gap: 21px;
+    gap: 35px;
     /* margin: 28px 0px 0px -106px; */
     margin-left: 100px;
     margin-top: 20px;
     /* padding: ; */
+}
+.lci{
+    display: flex;
+    flex-direction:row;
+    gap: 63px;
+    font-size: 21px;
+}
+.tweetbtn {
+    height: 23px; 
+    width: 124px; 
+    border: 1px solid white;
+    padding: 11px;
+    text-align: center;
+    border-radius: 20px;
+    font-size: 18px;
+    background-color: white;
+    color: black;
 }
 .hash{
     margin-right:50px;
@@ -136,14 +149,16 @@ p{
     font-size: 26px;
 }
 .search{
+    border-color: dodgerblue;
     border: 1px solid gray;
-    border-radius: 13px;
+    border-radius: 28px;
     padding: 11px;
     /* display: flex; */
     /* gap: 29px; */
     /* justify-content: space-between; */
     margin: 7px;
     width: 330px;
+    background-color: white;
 }
 .searcha{
    margin-right: 18px;
@@ -160,6 +175,7 @@ p{
     margin: 13px;
     /* width: 358px; */
     margin-right: 92px;
+    margin-top: 4px;
 }
 .signin{
    text-align: center;
@@ -220,13 +236,22 @@ h4{
 }
 .position{
     position: sticky;
-    top: 80px;
+    top: 90px;
 }
 .logoimg{
     height: 18px;
     width: 22px;
 }
+.hover:hover{
+    background-color: dodgerblue;
+    color: white;
+}
+.hover2:hover{
+border-color: dodgerblue;
+}
+
 .b1{
+    /* border-color: dodgerblue; */
     background-color:black;
     color: white;
     cursor: pointer;
@@ -262,6 +287,8 @@ button img{
     margin-left: 114px;
 }*/
 .btnn.a{
+    /* transition: 0.5sec; */
+    /* background-color: blue; */
     float: right;
     margin-right: 15px;
     position: sticky;
@@ -277,4 +304,12 @@ button{
     height: 39px;
     border-radius: 16px;
     font-size: 15px;
+}
+.inputsearch{
+    position: relative;
+    bottom: 3px;
+    outline: none;
+    border: none;
+    padding: 7px;
+    font-size: 14px;
 }
